--- a/_config.yml
+++ b/_config.yml
@@ -1,30 +1,8 @@
 # SITE CONFIGURATION
 #baseurl: "/Type-on-Strap"
 url: "http://victor.madtriangles.com/vulkan-guide/ "
-title: Victors Blog # site's title
-description: "Victor Blanco blog website" # used by search engines
+title: Vulkan Guide # site's title
+description: "Brand new guide to vulkan graphics programming" # used by search engines
 
 
 remote_theme: pmarsceill/just-the-docs
-
-# PAGINATION
-paginate: 5
-paginate_path: "blog/page:num"
-
-
-# PORTFOLIO
-collections:
-  portfolio:
-    output: true
-    permalink: /:collection/:name
-
-
-# BUILD SETTINGS
-markdown: kramdown
-highlighter: rouge
-sass:
-  sass_dir: _sass
-  style: :compressed
-plugins: [jekyll-paginate, jekyll-seo-tag]
-#theme: type-on-strap # Uncomment if using the theme as a jekyll theme gem
-exclude: ["Gemfile", "Gemfile.lock", "type-on-strap.gemspec", "*.gem", "LICENSE", "README.md", "screenshot.png"]
