Added chapter3-scene code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ add_subdirectory(chapter-0)
 add_subdirectory(chapter-1)
 add_subdirectory(chapter-2)
 add_subdirectory(chapter-3)
-
+add_subdirectory(chapter-3-scene)
 if (${CMAKE_HOST_SYSTEM_PROCESSOR} STREQUAL "AMD64")
   set(GLSL_VALIDATOR "$ENV{VULKAN_SDK}/Bin/glslangValidator.exe")
 else()
