Chapter 4 initial files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,8 @@ add_subdirectory(chapter-1)
 add_subdirectory(chapter-2)
 add_subdirectory(chapter-3)
 add_subdirectory(chapter-3-scene)
+add_subdirectory(chapter-4)
+
 if (${CMAKE_HOST_SYSTEM_PROCESSOR} STREQUAL "AMD64")
   set(GLSL_VALIDATOR "$ENV{VULKAN_SDK}/Bin/glslangValidator.exe")
 else()
