--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # SITE CONFIGURATION
-baseurl: /vulkan-guide
+#baseurl: /vulkan-guide
 title: Vulkan Guide # site's title
 description: "Brand new guide to vulkan graphics programming" # used by search engines
 
