--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ add_subdirectory(chapter-3)
 add_subdirectory(chapter-3-scene)
 add_subdirectory(chapter-4)
 add_subdirectory(chapter-5)
+add_subdirectory(extra-engine)
 if (${CMAKE_HOST_SYSTEM_PROCESSOR} STREQUAL "AMD64")
   set(GLSL_VALIDATOR "$ENV{VULKAN_SDK}/Bin/glslangValidator.exe")
 else()
