--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,8 @@ heading_anchors: true
 aux_links:
   "Vulkan Spec":
     - "https://www.khronos.org/registry/vulkan/specs/1.2-extensions/html/chap2.html#introduction"
+  "Github Repo":
+    - "https://github.com/vblanco20-1/vulkan-guide"
 
 # Footer content appears at the bottom of every page's main content
 footer_content: "Copyright &copy; 2020 Victor Blanco. Distributed by an <a href=\"https://github.com/pmarsceill/just-the-docs/tree/master/LICENSE.txt\">MIT license.</a>"
