Forking engine with new automated descriptor layout creation

--- a/extra-engine/CMakeLists.txt
+++ b/extra-engine/CMakeLists.txt
@@ -9,6 +9,8 @@ add_executable (extra
  "vk_mesh.h"
 "vk_textures.cpp"
  "vk_textures.h"
+"vk_shaders.cpp"
+ "vk_shaders.h"
  "vk_initializers.cpp" 
  "vk_initializers.h")
 
@@ -17,6 +19,6 @@ set_property(TARGET extra PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "$<TARGET_FILE_
 
 target_include_directories(extra PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
 
-target_link_libraries(extra vkbootstrap vma glm tinyobjloader imgui stb_image)
+target_link_libraries(extra vkbootstrap vma glm tinyobjloader imgui stb_image spirv_reflect)
 
 target_link_libraries(extra Vulkan::Vulkan sdl2)
