--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,3 +16,5 @@ target_include_directories(vulkan_guide PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
 target_link_libraries(vulkan_guide  vkbootstrap vma glm tinyobjloader imgui stb_image)
 
 target_link_libraries(vulkan_guide Vulkan::Vulkan sdl2)
+
+add_dependencies(vulkan_guide Shaders)
