New asset baker and loader library. Textures and meshes in main engine are now loaded through that

--- a/asset-baker/CMakeLists.txt
+++ b/asset-baker/CMakeLists.txt
@@ -8,5 +8,5 @@ set_property(TARGET baker PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "$<TARGET_FILE_
 
 target_include_directories(baker PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
 
-target_link_libraries(baker tinyobjloader stb_image json lz4)
+target_link_libraries(baker PUBLIC tinyobjloader stb_image json lz4 assetlib)
 
