--- a/extra-engine/CMakeLists.txt
+++ b/extra-engine/CMakeLists.txt
@@ -21,4 +21,4 @@ target_include_directories(extra PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
 
 target_link_libraries(extra vkbootstrap vma glm tinyobjloader imgui stb_image spirv_reflect)
 
-target_link_libraries(extra Vulkan::Vulkan sdl2)
+target_link_libraries(extra Vulkan::Vulkan sdl2 assetlib)
