Implemented material and prefab system, gltf converts to that. Can now load helmet with a single load_prefab call

--- a/assetlib/CMakeLists.txt
+++ b/assetlib/CMakeLists.txt
@@ -2,9 +2,13 @@ set(CMAKE_CXX_STANDARD 17)
 # Add source to this project's executable.
 add_library (assetlib STATIC 
 "mesh_asset.h"
-"texture_asset.h"
 "mesh_asset.cpp"
+"texture_asset.h"
 "texture_asset.cpp"
+"material_asset.h"
+"material_asset.cpp"
+"prefab_asset.h"
+"prefab_asset.cpp"
 "asset_loader.h"
 "asset_loader.cpp"
 )
