--- a/extra-engine/CMakeLists.txt
+++ b/extra-engine/CMakeLists.txt
@@ -7,6 +7,8 @@ add_executable (extra
  "vk_types.h" 
  "vk_mesh.cpp"
  "vk_mesh.h"
+  "vk_scene.cpp"
+ "vk_scene.h"
 "frustum_cull.h"
 "vk_textures.cpp"
  "vk_textures.h"
