--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ add_subdirectory(third_party)
 
 set (CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
 
+add_subdirectory(shared)
+
 add_subdirectory(chapter-0)
 add_subdirectory(chapter-1)
 add_subdirectory(chapter-2)
