chapter 3-4-5 big updates. refactored loader

--- a/shared/CMakeLists.txt
+++ b/shared/CMakeLists.txt
@@ -12,6 +12,8 @@ add_library (vkguide_shared STATIC
   vk_pipelines.cpp
   camera.cpp
   camera.h
+  meshes.h
+  meshes.cpp
 )
 
 set_property(TARGET vkguide_shared PROPERTY CXX_STANDARD 20)
