fixing chapter 5 desync issues with resize code, created chapter 6 with bindless testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ add_subdirectory(chapter-2)
 add_subdirectory(chapter-3)
 add_subdirectory(chapter-4)
 add_subdirectory(chapter-5)
-add_subdirectory(meshbaker)
+add_subdirectory(chapter-6)
 find_program(GLSL_VALIDATOR glslangValidator HINTS /usr/bin /usr/local/bin $ENV{VULKAN_SDK}/Bin/ $ENV{VULKAN_SDK}/Bin32/)
 
 
