--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,12 +1,12 @@
 
 # Add source to this project's executable.
-add_executable (engine 
+add_executable (engine
   main.cpp
   vk_types.h
   vk_initializers.cpp
   vk_initializers.h
   vk_images.h
-  vk_images.cpp 
+  vk_images.cpp
   vk_descriptors.h
   vk_descriptors.cpp
   vk_pipelines.h
@@ -28,6 +28,6 @@ target_link_libraries(engine PUBLIC vma glm Vulkan::Vulkan fmt::fmt stb_image SD
 target_precompile_headers(engine PUBLIC <optional> <vector> <memory> <string> <vector> <unordered_map> <glm/mat4x4.hpp>  <glm/vec4.hpp> <vulkan/vulkan.h>)
 
 add_custom_command(TARGET engine POST_BUILD
-  COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_RUNTIME_DLLS:engine> $<TARGET_FILE_DIR:engine>
+  COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:engine> $<TARGET_FILE_DIR:engine>
   COMMAND_EXPAND_LISTS
   )
